--- a/index.html
+++ b/index.html
@@ -2,11 +2,34 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="stylesheet/style.css">
+		<link rel="stylesheet" href="air.css">
 	</head>
+	<style>
+		@font-face{
+			font-family:caviar dream;
+			src: url('CaviarDreams.ttf');
+		}
+		
+
+
+	</style>
+	<p class="title"> All ABOUT </p>
+	<p class="text"> AIRPLANE </p>
 
 	<body>
-		<h1>Webzine!</h1>
-		<!-- put in your webzine content here -->
+		
+
+	 <a href="index1.html">
+        <img class="image-1" src="PA.png" alt="Clickable image 1">
+    </a>
+
+    <a href="index2.html">
+        <img class="image-2" src="PB.png" alt="Clickable image 2">
+    </a>
+
+    <a href="index3.html">
+        <img class="image-3" src="a1.png" alt="Clickable image 3">
+    </a>
+		
 	</body>
 </html>
