--- a/index1.html
+++ b/index1.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="index1.css">
 	<title> Combat Aircraft</title>
 </head>
@@ -15,6 +16,29 @@
 
 	</style>
 <body>
+	<body>
+		<button id="accelerate">Accelerate</button>
+		 <div class="airplane">
+        <img src="p.png" alt="Airplane" />
+        <span class="tail"> <img src="cloud.png" alt="Tail"></span>
+    </div>
+    <!--  <div id="airplane">
+        <img src="PB.png" alt="Airplane"> 
+    </div>
+        <div id="tail">
+         <img src="w.png" alt="Tail">
+    </div> -->
+        <!-- <div class="emoji">
+            💨
+        </div> -->
+
+        <a href="index1.html">
+          <img class="monitor" src="m.png" alt="Monitor">
+          </a>
+  
+    
+    
+     <script src="index1.js"></script>
+</body>
 
 </body>
-</html>
