--- a/index2.html
+++ b/index2.html
@@ -2,10 +2,28 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="index1.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+	<link rel="stylesheet" type="text/css" href="index2.css">
 	<title> Unmanned aircraft</title>
 </head>
 <body>
-
+<button id="rotateButton">Rotate Airplane</button>
+    <!-- <div class="custom-cursor">
+    Hover over me to see the custom cursor!
+</div> -->
+    <!-- <button id="rotateButton" class="hand" > <img src="h.png"> </button>  -->
+    <!-- <img id="rotateButton" src="path/to/your/button_image.png" alt="Rotate and Move Airplane"> --> 
+ <a href="index2.html">
+          <img class="player" src="g.png" alt="Player">
+          </a>
+          <div id="airplane">
+        <img src="a1.png" alt="Airplane" />
+    </div>
+<!--  <a href="index2.html">
+          <img class="hand" src="h.png" alt="Hand">
+          </a> -->
+<!-- <img src="h.png" class="hand" src="h.png" alt="Hand" > -->
+        <script src="index2.js"></script>
 </body>
 </html>
