--- a/index3.html
+++ b/index3.html
@@ -2,10 +2,23 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="index1.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="index3.css">
 	<title> Civilian aircraft</title>
 </head>
 <body>
-
+	<button id="glowButton">Make Airplane Glow</button>
+	
+	<a href="index3.html">
+          <img class="captain" src="f.png" alt="Captain">
+          </a>
+ <a href="index3.html">
+          <img class="light" src="L.png" alt="Light">
+          </a>
+          <div id="airplane">
+        <img src="PA.png" alt="Airplane" />
+    </div>
+    
+<script src="index3.js"></script>
 </body>
 </html>
