--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,8 @@
 	<title> Unmanned aircraft</title>
 </head>
 <body>
+    <div id="text">Unmanned </div>
+    <div id="text1"> Aircraft</div>
 <button id="rotateButton">Rotate Airplane</button>
     <!-- <div class="custom-cursor">
     Hover over me to see the custom cursor!
