--- a/index3.html
+++ b/index3.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="index3.css">
 	<title> Civilian aircraft</title>
 </head>
+	<div id="text">Civilian Aircraft</div>
 <body>
 	<button id="glowButton">Make Airplane Glow</button>
 	
