--- a/index1.html
+++ b/index1.html
@@ -6,16 +6,8 @@
 	<link rel="stylesheet" href="index1.css">
 	<title> Combat Aircraft</title>
 </head>
-<style>
-		@font-face{
-			font-family:caviar dream;
-			src: url('CaviarDreams.ttf');
-		}
-		
 
-
-	</style>
-<body>
+	<div id="text">Combat Aircraft</div>
 	<body>
 		<button id="accelerate">Accelerate</button>
 		 <div class="airplane">
